<resources>
    <string name="app_name">Oui-Bot</string>
    <string name="oui_bot_id">My ID</string>
    <string name="master">Master</string>
    <string name="master_id">Master ID</string>
    <string name="delete_master">Will you delete master?</string>
    <string name="oui_bot_mode_setting">Oui-Bot/Mode setting</string>
    <string name="ouibot_mode_setting">Oui-Bot mode setting</string>
    <string name="secure_detect_mode">Motion Detection</string>
    <string name="activity_detect_mode">Inactivity Sensing</string>
    <string name="cut">Edit</string>
    <string name="confirm">OK</string>
    <string name="cancel">cancel</string>
    <string name="confirm_master">Master mode setting is complete.</string>
    <string name="ouibot_remove">Disconnect Oui-Bot</string>
    <string name="noti_list_confirm">Detected list</string>
    <string name="detected_list_data">Detected list</string>
    <string name="oui_add_master_request">Master request</string>
    <string name="oui_add_master_request_">Add Oui-Bot (Master request)</string>
    <string name="do_you_allow_master">Would you like to leave a Oui-Bot security management?</string>
    <string name="secure_mode_text">Motion Detection</string>
    <string name="secure_mode_sub_text">when intruder is detected, Oui-Bot takes a picture and notify user.</string>
    <string name="movement_mode_text">Inactivity Sensing</string>
    <string name="setting_none_activity_mode_explain_01">When Ouibot detects no activities, it starts video recording for the duration you set up.</string>
    <string name="setting_none_activity_mode_explain_02">Set the detection sensitivity when no activity is not detected in the house.</string>
    <string name="movement_mode_sub_text">Oui-Bot detects residents’ movement, and when no movement is detected for a while, Oui-bot notify the user.</string>
    <string name="setting_video_save_mode">Video Recordings</string>
    <string name="setting_video_save_time">Video Recording Time</string>
    <string name="setting_secure_mode_explain_01">When Ouibot detects any motion, it starts video recording for the duration you set up.</string>
    <string name="setting_detect_sensitivity">Sensitivity</string>
    <string name="setting_secure_mode_explain_02">When Ouibot detects any motion, it sets the sensitivity of detection. Higher sensitivity will detect smaller activities. However, it may over react to change of illumination as well.</string>
    <string name="setting_do_atfer_setting_time">Time Wait before Operation</string>
    <string name="setting_secure_mode_explain_03">After the setting time, Ouibot starts the detection.</string>
    <string name="setting_none_activity_time">Inactivity Time settings</string>
    <string name="setting_secure_mode_explain_04">When Ouibot detects inactivity for the duration you set up, it gives alarms to master IDs.</string>
    <string name="do_you_want_disconnected">Do you want to disconnect Oui-Bot?</string>
    <string name="found_move_detection">Movement is detected.</string>
    <string name="no_found_move_detection">No movement is detected for a set time.</string>
    <string name="it_is_recording_can_not_use_detect_mode">Recording. While recording, detect mode is unavailable.</string>
    <string name="it_is_recording_can_not_use_none_activity_mode">Recording. While recording, no movement detect mode is unavailable.</string>
    <string name="start_detection_mode_with_second">/s after, Oui-Bot starts the secure mode.</string>
    <string name="start_none_activity_mode_with_second">/s after, no Oui-Bot starts the no movement mod.</string>
    <string name="input_id">Please Input Oui-bot ID</string>
    <string name="can_not_register_master_id">This ID cannot be registered as master.</string>
    <string name="wait_for_accept">Wait for accept from master.</string>
    <string name="over_master_max_count">Cannot register as master. Try again after deleting the previous master.</string>
    <string name="already_registered_master">It has already been registered in the master.</string>
    <string name="please_input_your_sdcard">Please input your SDcard.</string>
    <string name="peer_is_not_login">Peer is not logged in.</string>
    <string name="you_do_not_have_master_power">You do not have master authorization.</string>
    <string name="notification_detected_start">Secure mode has been activated.</string>
    <string name="notification_none_activity_start">No movement mode has been activated.</string>
    <string name="notification_detected_finish">Secure mode has been deactivated.</string>
    <string name="notification_none_activity_finish">No movement mode has been deactivated.</string>
    <string name="can_not_any_action_in_connect_phone_call">During the call it can not be activated.</string>
    <string name="connected">Connected.</string>
    <string name="call_prepare">It is preparing a call.</string>
    <string name="end_call">The termination of the call.</string>
    <string name="missed_call">Missed calls.</string>
    <string name="receipt_refusal">Call refused.</string>
    <string name="waiting_connect">waiting to connect&#160;</string>
    <string name="cellphone">Cellphone</string>
    <string name="wanted_telephone">Incoming call.</string>
    <string name="missed_call_for_ios_push">Missed Call</string>
    <string name="make_call">calling.</string>
    <string name="calling_not_terminated">while calling,it cannot be terminated.</string>
    <string name="connection_phone_call">connecting.</string>
    <string name="connection_cctv">CCTV is connected.</string>
    <string name="connection_cctvmode">CCTV MODE is activated.</string>
    <string name="cctvmode_connection">CCTV MODE is not activating.</string>
    <string name="bring_information">Collecting information.</string>
    <string name="cctvmode_end">CCTV Mode has been deactivated.</string>
    <string name="cctv_prepare_connection">CCTV is preparing to connect.</string>
    <string name="calling_view">Call view</string>
    <string name="input_name">Input name.</string>
    <string name="input_ouibot_id">Input Oui-Bot ID.</string>
    <string name="your_number_not_saved">Your number cannot be saved.</string>
    <string name="not_able_apply_for_permission_view_the_camera">Not able to apply for permission to view the camera.</string>
    <string name="registration_contact">Contact is registered.</string>
    <string name="same_id">Same ID exists.</string>
    <string name="same_name">Same name exists.</string>
    <string name="phonelist_not_register">contact is not registered.</string>
    <string name="try_again">Try again.</string>
    <string name="contact_modified">Contact is modified.</string>
    <string name="passwd_modified">Password is modified.</string>
    <string name="contact_not_modified">Contact is not modified correctly.</string>
    <string name="re_modified">Modify again.</string>
    <string name="password_match">Password match.</string>
    <string name="password_not_match">Password is not matched.</string>
    <string name="id_8_letter_re_enter">ID is not 8 letters. Try again</string>
    <string name="id_format_is_not">ID is not in correct format. Try again</string>
    <string name="enter_id">Enter ID.</string>
    <string name="id_available">ID available.</string>
    <string name="booked_id">Input ID is in use already.</string>
    <string name="input_id2">Input ID</string>
    <string name="id_overlap_check">Check ID overlap button</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_password_check">Enter Password again</string>
    <string name="user_agreement">User agreement</string>
    <string name="personal_information_collection">Personal Information Collection</string>
    <string name="enter_name">Enter name</string>
    <string name="email_enter">Enter Email address.</string>
    <string name="gender_check">Gender check.</string>
    <string name="input_birtd_day">Input birth date.</string>
    <string name="not_make_id">ID couldn’t be created.</string>
    <string name="retry">Try again.</string>
    <string name="make_id">ID is created.</string>
    <string name="input_number">Input phone number.</string>
    <string name="format_not_number_retry">Wrong format. Try again.</string>
    <string name="can_not_call_you">Cannot call yourself.</string>
    <string name="can_not_message_you">Cannot send yourself messages.</string>
    <string name="item_deleted_successfuly">Item is deleted successfully.</string>
    <string name="item_deleted_fail">Item deletion fail.</string>
    <string name="login_info_fail">No matching login info.</string>
    <string name="login_fail">Login fail.</string>
    <string name="backbutton_click_is_finish"><![CDATA["'"]]>Back<![CDATA["'"]]>Click this button to terminate.</string>
    <string name="prepare">Preparing.</string>
    <string name="petmode_finish">PET MODE is deactivated.</string>
    <string name="petmode_prepare">Oui-Bot is preparing to connect PET Mode.</string>
    <string name="petmode_connect">PET MODE is connected.</string>
    <string name="petmode_connecting">PET MODE is connecting.</string>
    <string name="ouibot_id_nonexistent">Oui-Bot ID does not exist.</string>
    <string name="password_check">Check Password</string>
    <string name="password_check_2">* Check Password again</string>
    <string name="password_enter">Input Password</string>
    <string name="number_register">Number is registered.</string>
    <string name="password_reset_fail">Password reset has failed.</string>
    <string name="id_not_find">Id is not found.</string>
    <string name="camera_permission">Would you permission to view the camera?</string>
    <string name="contact_plus">Add</string>
    <string name="contact_add">Search</string>
    <string name="contact_modify">Modify Contact</string>
    <string name="name">Name</string>
    <string name="id">ID</string>
    <string name="register">Register</string>
    <string name="camera_view">Camera view Authorization</string>
    <string name="modify">Modify</string>
    <string name="password">Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="pwd_check">password once more</string>
    <string name="ouibot_id_eight">8 digit Number</string>
    <string name="redundancy_check">Availability Check</string>
    <string name="id_info">* Please note that you need 8 digit number for your permanent App ID and that the numbers should start  <![CDATA["'"]]>5~9<![CDATA["'"]]> (EX : 50000078) </string>
    <string name="gender">Gender</string>
    <string name="man">Male</string>
    <string name="woman">Female</string>
    <string name="birth_data">Date of Birth</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="day">day</string>
    <string name="ouibot_id_search">Oui-Bot ID Search</string>
    <string name="ouibot_passwd_search">Oui-Bot password Search</string>
    <string name="id_search_info">After filling the below, confirm</string>
    <string name="oui_bot_id_search_info">Oui-Bot ID Info</string>
    <string name="user_id_inquiry">User’s Oui-Bot ID is inquired.</string>
    <string name="call_112">Call 112</string>
    <string name="call_119">Call 119</string>
    <string name="event_date">Event date:</string>
    <string name="save_path">Save Path:</string>
    <string name="file_name">File Name:</string>
    <string name="add_activity_ouitbot_add">Oui-Bot ID</string>
    <string name="safe1_number">82-1899-5552</string>
    <string name="safe1_explain1">Safe1 customer service</string>
    <string name="ouibot">Oui-bot</string>
    <string name="faqcenter">FAQ Center</string>
    <string name="faqstring">We regret that FAQs are currently offered in Korean only. However, if you email us (oui-bot@safe1.co.kr), we promptly answer your query.</string>
    <string name="faqlink">Link to FAQ Center (Korean)</string>
</resources>