<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/history_list_bg"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="240dp"
            android:layout_height="90dp"
            android:src="@drawable/ic_contents_logo" />


        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_contents"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/safe1_number"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/safe1_explain1"
                android:textSize="15dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="230dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_support_qna"
            android:gravity="left|center_vertical"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ouibot"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/faqcenter"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />

            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="70dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/faqstring"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </ScrollView>

            <LinearLayout
                android:id="@+id/btn_control_long"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_control_long"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/faqlink"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/top_menu_bg"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>