<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F0F0"
    android:orientation="vertical"
    android:focusableInTouchMode="true"
    >
    <TextView
        android:paddingTop="30dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ouibot_id_search"
        android:textStyle="bold"
        android:textColor="@color/top_menu_text_color_activity"
        android:textAppearance="?android:attr/textAppearanceLarge"
        />

    <TextView
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/oui_bot_id_search_info"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceSmall"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/top_menu_text_color_activity"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="vertical"
                >
                <TextView
                    android:id="@+id/search_id_result_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/user_id_inquiry"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/search_id_result"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/name"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"
                    />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="40dp"
                    android:textColor="#ffffff"
                    android:background="@color/top_menu_text_color_activity"
                    android:text="@string/confirm"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:onClick="onsearchidendClieckd"
                    />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>
